--- a/LearnMoto/app/build.gradle
+++ b/LearnMoto/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
+    implementation 'me.biubiubiu.justifytext:library:1.1'
 
 
     implementation 'com.github.dhaval2404:imagepicker:2.1'
