Text-to-Speech Stories

--- a/LearnMoto/app/src/main/AndroidManifest.xml
+++ b/LearnMoto/app/src/main/AndroidManifest.xml
@@ -21,7 +21,28 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".ViewStory"
+            android:name=".Nursery.Story.FourthStory"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".Nursery.Story.ThirdStory"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".Nursery.Story.SecondStory"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".Nursery.Story.FirstStory"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
