--- a/LearnMoto/app/build.gradle
+++ b/LearnMoto/app/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
 
     implementation 'com.github.dhaval2404:imagepicker:2.1'
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.13.2'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
