--- a/LearnMoto/app/src/main/AndroidManifest.xml
+++ b/LearnMoto/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".SubjectVideo"
+            android:name=".Teacher.SubjectVideo"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
