--- a/LearnMoto/app/src/main/AndroidManifest.xml
+++ b/LearnMoto/app/src/main/AndroidManifest.xml
@@ -21,6 +21,139 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".Preparatory.SibikaKultura.PrepSibKulVideoView"
+            android:exported="false"
+            android:noHistory="true"
+            android:screenOrientation="landscape">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".Preparatory.Science.PrepSciVideoView"
+            android:exported="false"
+            android:noHistory="true"
+            android:screenOrientation="landscape">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".Preparatory.Math.PrepMathVideoView"
+            android:exported="false"
+            android:noHistory="true"
+            android:screenOrientation="landscape">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".Preparatory.Filipino.PrepFilVideoView"
+            android:exported="false"
+            android:noHistory="true"
+            android:screenOrientation="landscape">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".Preparatory.English.PrepEngVideoView"
+            android:exported="false"
+            android:noHistory="true"
+            android:screenOrientation="landscape">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".Preparatory.ChristianLiving.PrepCLVideoView"
+            android:exported="false"
+            android:noHistory="true"
+            android:screenOrientation="landscape">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".Nursery.Science.NurserySciVideoView"
+            android:exported="false"
+            android:noHistory="true"
+            android:screenOrientation="landscape">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".Nursery.Math.NurseryMathVideoView"
+            android:exported="false"
+            android:noHistory="true"
+            android:screenOrientation="landscape">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".Nursery.English.NurseryEngVideoView"
+            android:exported="false"
+            android:noHistory="true"
+            android:screenOrientation="landscape">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".Nursery.ChristianLiving.NurseryCLVideoView"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".Kinder.Science.KinderSciVideoView"
+            android:exported="false"
+            android:noHistory="true"
+            android:screenOrientation="landscape">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".Kinder.Math.KinderMathVideoView"
+            android:exported="false"
+            android:noHistory="true"
+            android:screenOrientation="landscape">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".Kinder.Filipino.KinderFilVideoView"
+            android:exported="false"
+            android:noHistory="true"
+            android:screenOrientation="landscape">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".Kinder.English.KinderEnglishVideoView"
+            android:exported="false"
+            android:noHistory="true"
+            android:screenOrientation="landscape">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".Kinder.ChristianLiving.KinderCLVideoView"
+            android:exported="false"
+            android:noHistory="true"
+            android:screenOrientation="landscape">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".Teacher.SubjectVideo"
             android:exported="false">
             <meta-data
