--- a/LearnMoto/app/src/main/AndroidManifest.xml
+++ b/LearnMoto/app/src/main/AndroidManifest.xml
@@ -22,6 +22,13 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".DisplayChildData"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".MathActivity"
             android:exported="false"
             android:noHistory="true">
